# windows-split-pac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  Start-WindowsSplitPAC.cmd  THIRD_PARTY_NOTICES.md  WindowsSplitPAC.ps1  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml  ci.yml  test.yml
assets/fonts/: OFL.txt
docs/: promotion-kit.md
rules/: user-rules.txt
rust-gui/: Cargo.toml
rust-gui/src/: lib.rs  main.rs
scripts/: Build-Pac.ps1  Disable-WindowsPac.ps1  Enable-WindowsPac.ps1  Get-WindowsPacStatus.ps1  Install-Autostart.ps1  Install-Dependencies.ps1  Restore-WindowsProxyBackup.ps1  Save-WindowsProxyBackup.ps1  Start-PacServer.ps1  Stop-PacServer.ps1  Test-Package.ps1  Test-SplitRouting.ps1  Test-WindowsProxyBackup.ps1  Uninstall-Autostart.ps1
src/: pac_server.py
